# Network_Routing_Optimization

./: .gitignore  README.md  pyproject.toml
C++ Folder/dijkstra_project/: main.cpp  report.txt  results.csv
Code/C++ Code/Harmony search/: Makefile  main.cpp
Code/C++ Code/dijkstra_project/: Makefile  README.md
Code/Python Code/Derek Implementation/src/routing_project/: __init__.py
Python Folders/Aaron Files/: Readme.txt  dijkstra_test.py  graph.py  graph_1024_nodes.json  graph_128_nodes.json  graph_256_nodes.json  mainscript.sh  results.csv
Python Folders/Derek Code/: README.md
Python Folders/Derek Code/reports/: second_checkpoint_report.md
Python Folders/Derek Code/src/routing_project/: algorithms.py  charts.py
Python Folders/Derek Code/tests/: __init__.py  test_algorithms.py  test_charts.py  test_experiments.py
Tables & Graphs/Aaron Graphs- Python/: graph_2048_nodes.json  graph_4096_nodes.json  graph_512_nodes.json  graph_64_nodes.json
Tables & Graphs/Derek Graph's- Python/raw/: small_experiment.csv
reports/: second_checkpoint_report.md
results/charts/: results_summary.md
results/raw/: small_experiment.csv
src/routing_project/: algorithms.py  charts.py  cli.py  experiments.py  graph.py
tests/: test_experiments.py  test_graph.py
