[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "routing-algorithm-comparison"
version = "0.1.0"
description = "CSC 2400 routing algorithm comparison project"
requires-python = ">=3.10"
authors = [
  { name = "Aaron Werth" },
  { name = "Spencer Kirksey" },
  { name = "Derek Nelson" },
  { name = "Alan Tate" }
]

[project.scripts]
routing-project = "routing_project.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
